# machine_learning_djl1

./: .gitignore  CMakeLists.txt  data  test_softmax.py  test_svm.py
aima/c4qt/: CMakeLists.txt  ai.h  c4qt.pro  debug.h  direction.h  lrtastar.cpp  lrtastar.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.cpp  map.h  mapfunctions.h  moc_mainwindow.cpp  node.cpp  node.h  nodemap.cpp  nodemap.h  onlinedfs.cpp  onlinedfs.h  ui_mainwindow.h
aima/c4qt/old/: lrtastar.cpp  lrtastar.h  node.cpp  node.h  nodemap.cpp  nodemap.h  possibles.cpp  possibles.h
aima/chapter3/: .gitignore  CMakeLists.txt  chapter3.cpp  chapter3.py  hc.py  humanitarians_and_cannibals.drawing
aima/chapter4/: chapter4.cpp  chapter4b.cpp  createmaze.cpp  maze18x18.txt
aima/chapter4/city_points.dgraph/: ._Checksums.plist  ._ColumnData.dtbin  ._Columns.plist  ._Content.plist  ._Contents  ._Graphics  ._Graphs  ._QuickLook  Checksums.plist  Columns.plist  Content.plist
aima/chapter4/qtchapter4/: qtchapter4.pro
aima/chapter4bqt/: map.h
aima/chapter6/: ac3.cpp  ac3.h  backtrack.cpp  backtrack.h  constraint.h  csp.cpp  csp3.cpp  var.cpp
aima/chapter6/csp1/: CMakeLists.txt  ac3.h  backtrack.cpp  backtrack.h  constraint.h  csp3.cpp  var.h
aima/chapter7/: CMakeLists.txt  agent.cpp  agent.h  c7.cpp  map.cpp  map.h
cifar/: Dataset.py  Datasets.py  Labels.py
common/: Datasets.py  ImageDataset.py  LabelDataset.py  MultiSVM.py  WriteImages.py
mnist/: Dataset.py  Datasets.py  Labels.py
smiley/: Dataset.py  Datasets.py  Labels.py
test/: test_dataset_loads.py  test_svm.py
(+3 files in other folders)
